2015-01-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (documentation for multitable): Change 
	'cell_count' to 'cell_number'.

2015-01-22  Karl Berry  <karl@gnu.org>

	* info/t/resize-in-completions.sh: reword msg to avoid
	backslashed ', just in case.

2015-01-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (Module documentation section): Tweak
	descriptions of what 'node_manuals' entries and 
	'menu_entry_node' are.  Add section mentioning 'nodes' and 
	'menus' arrays.

2015-01-18  Karl Berry  <karl@gnu.org>

	* info/t/Init-inter.inc: if mknod doesn't exist,
	or mknod ... p fails, exit 77.

2015-01-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-inter.inc: (findprog) Add function from util/texi2dvi.
	(run_ginfo) Call findprog to check for pgrep.  If not found, 
	wait a short while for controlled process to start.
	* info/t/resize-in-completions.sh: Print an informative message 
	to standard error if test is skipped.

2015-01-15  Karl Berry  <karl@gnu.org>

	* Makefile.am (po-check): include ti.twjr, exclude parsetexi, etc.
	* po/POTFILES.in: update.
	* util/texindex.c: remove.

2015-01-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-inter.inc (run_ginfo): When setting GINFO_PID, 
	include more commands in subshell.  This means the tests at 
	least pass when run in-source.

	* info/t/Init-inter.inc, info/t/Init-test.inc, 
	info/t/Timeout-test.inc, info/t/Cleanup.inc: Create temporary 
	files in $builddir.
	* info/Makefile.am: Distribute info/t/node-target.
	* info/t/infodir/file-menu.info: Specify a target file as a 
	simple filename, instead of a compound path, to allow 
	t/file-file-with-dot.sh test to pass out-of-source.

2015-01-14  Karl Berry  <karl@gnu.org>

	* info/t/Cleanup.inc,
	* info/t/Init-inter.inc,
	* info/t/Init-test.inc,
	* info/t/Timeout-test.inc: portability (export =, test -v, ! test,
	...),
	usability with separate builddir != srcdir,
	usual style.

	* texindex/Makefile.am,